--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 
     <ion-pane>
       <ion-nav-bar class="bar-header">
-        <ion-nav-back-button></ion-nav-back-button>
+        <ion-nav-back-button style="color: black"></ion-nav-back-button>
       </ion-nav-bar>
       <ion-nav-view></ion-nav-view>
       <ion-footer-bar class="bar-footer" padding="false">
